--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/index.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/index.html
@@ -38,6 +38,8 @@
     google.charts.load('current', { packages: ['corechart'] });
     google.charts.setOnLoadCallback(drawChart);
   </script>
+  <!-- <script src="node_modules/flowbite/dist/flowbite.min.js"></script> -->
+
 </head>
 
 <body class="mat-typography">
